--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <p>Download EXIF Photo Printer and start creating professional prints with embedded camera data.</p>
             </div>
             
-            <a href="EXIF Photo Printer-1.0.0.dmg" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
+            <a href="https://github.com/ejfox/exif-photo-printer-website/releases/latest/download/EXIF-Photo-Printer-1.0.0.dmg" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
                 <svg class="download-icon" style="width: 24px; height: 24px;" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                 </svg>
