Update download links to point to GitHub releases page
- Both hero and download section now link to releases
- Users can see all available versions and release notes
- More transparent and professional download experience

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <div class="app-icon"></div>
                 <h1>EXIF Photo Printer</h1>
                 <p class="tagline">Utilitarian photo printing with embedded EXIF data. Minimal interface, maximum function. Professional results for serious photographers.</p>
-                <a href="#download" class="cta-button">
+                <a href="https://github.com/ejfox/exif-photo-printer-website/releases" class="cta-button">
                     <svg class="download-icon" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                     </svg>
@@ -443,7 +443,7 @@
                 <p>Download EXIF Photo Printer and start creating professional prints with embedded camera data.</p>
             </div>
             
-            <a href="https://github.com/ejfox/exif-photo-printer-website/releases/latest/download/EXIF-Photo-Printer-1.0.0.dmg" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
+            <a href="https://github.com/ejfox/exif-photo-printer-website/releases" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
                 <svg class="download-icon" style="width: 24px; height: 24px;" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                 </svg>
